tests/core/snapshots/jit-enum-array.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

enum Department {
  BLUE
  ENGINEERING
  MARKETING
}

type DTA {
  departments: [Department]
}

type Query {
  color: DTA @expr(body: {departments: ["ENGINEERING", "MARKETING"]})
}
