tests/core/snapshots/js-directive.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream @link(src: "test.js", type: Script) {
  query: Query
}

type Query {
  hello: User! @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  id: Int!
  name: String! @js(name: "name")
}
