tests/core/snapshots/n-plus-one-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  foo: [Foo]
  fooId: Int!
  id: Int!
}

type Foo {
  bar: Bar
  id: Int!
  name: String!
}

type Query {
  bars: [Bar]
  foos: [Foo]
}

schema {
  query: Query
}
