tests/core/snapshots/nested-recursive-types.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
  mutation: Mutation
}

input ConnectionInput {
  nested: NestedUserInput
  type: String
}

input NestedUserInput {
  user: UserInput
}

input UserInput {
  connections: [ConnectionInput] @http(path: "/connections/{{.value.id}}")
  id: Int!
  name: String
}

type Connection {
  nested: NestedUser
  type: String
}

type Mutation {
  createUser(user: UserInput): User @http(body: "{{.args.user}}", method: "POST", path: "/user")
}

type NestedUser {
  user: User
}

type Query {
  user: User @http(path: "/users/1")
}

type User {
  connections: [Connection] @http(path: "/connections/{{.value.id}}")
  id: Int!
  name: String
}
