tests/core/snapshots/omit-index-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query @addField(name: "username", path: ["username", "0", "name"]) {
  username: [User] @http(url: "http://jsonplaceholder.typicode.com/users") @modify(omit: true)
}

type User {
  name: String
}
