tests/core/snapshots/recursive-type.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Color {
  colors: [Color]
  isColorPageExists: Boolean
  isColorsImageAvailable: Boolean
}

type Query {
  color: Color @http(baseURL: "https://color.com", path: "/")
}
