tests/core/snapshots/recursive-types-no-resolver.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Connection {
  type: String
  user: User
}

type Query {
  user: User
}

type User {
  connections: [Connection]
  id: Int!
  name: String
}
